@@ -59,7 +59,7 @@
 		</queries>
 	</uninstall>
 	<administration>
-		<menu link="option=com_gallery">Gallery</menu>
+		<menu link="option=com_gallery16">Gallery</menu>
 		<files>
 			<filename>admin.gallery.php</filename>
 			<filename>admin.gallery.html.php</filename>
