@@ -429,3 +429,15 @@ table.g-albums-table .g-albumdesc-cell {
     font-size: 9pt;
     margin: 2px;
 }
+
+.g-comment-box {
+    margin: 2px 5px;
+    padding-left: 30px;
+    width: 75%;
+    border: 1px solid silver;
+}
+
+.g-comment-text-cell {
+    padding-left:10px;
+    border-top:1px solid black;
+}
