@@ -1,3 +1,11 @@
+2006-10-12 Jens Tkotz <jens@peino.de> 1.6-svn-b24
+
+ * Fix: Missed some tablename changes in 1.6-svn-b7 
+	for joomla! and mambo
+
+ * Change: CSS changes to make popup headers and comments 
+	   look nicer when embedded.
+
 2006-10-12 Jens Tkotz <jens@peino.de> 1.6-svn-b23
 
  * Fix: #1299913 ; $_REQUEST['name'] is now NOT longer an indicator for beeing embedded.
